--- a/src/app/products/products-list.component.html
+++ b/src/app/products/products-list.component.html
@@ -4,12 +4,12 @@
     <div class="row">
       <div class="col-md-2">Filter by:</div>
       <div class="col-md-4">
-        <input type="text" />
+        <input type="text" [(ngModel)]="listFilter" />
       </div>
     </div>
     <div class="row">
       <div class="col-md-6">
-        <h4>Filtered By:</h4>
+        <h4>Filtered By: {{ listFilter }}</h4>
       </div>
     </div>
     <div class="table-responsive">
@@ -17,7 +17,9 @@
         <thead>
           <tr>
             <th>
-              <button class="btn btn-primary">Show Image</button>
+              <button (click)="toggleShowImage()" class="btn btn-primary">
+                {{ showImage ? "Hide" : "Show" }} Image
+              </button>
             </th>
             <th>Product</th>
             <th>Code</th>
@@ -28,11 +30,19 @@
         </thead>
         <tbody>
           <tr *ngFor="let product of products">
-            <td></td>
+            <td>
+              <img
+                *ngIf="showImage"
+                [src]="product.imageUrl"
+                [title]="product.productName"
+                [style.width.px]="imageWidth"
+                [style.margin.px]="imageMargin"
+              />
+            </td>
             <td>{{ product.productName }}</td>
-            <td>{{ product.productCode }}</td>
+            <td>{{ product.productCode | lowercase }}</td>
             <td>{{ product.releaseDate }}</td>
-            <td>{{ product.price }}</td>
+            <td>{{ product.price | currency : "USD" : "symbol" : "1.2-2" }}</td>
             <td>{{ product.startRating }}</td>
           </tr>
         </tbody>
