--- a/src/app/products/products-list.component.html
+++ b/src/app/products/products-list.component.html
@@ -45,7 +45,12 @@
             </td>
             <td>{{ product.releaseDate }}</td>
             <td>{{ product.price | currency : "USD" : "symbol" : "1.2-2" }}</td>
-            <td>{{ product.startRating }}</td>
+            <td>
+              <app-star
+                [rating]="product.starRating"
+                (ratingClicked)="onRatingClicked($event)"
+              ></app-star>
+            </td>
           </tr>
         </tbody>
       </table>
